Fix book popup menu z-index
- Reduce z-index of .MenuTrigger-popup so that it appears behind the
  app bar
- Remove useless z-index from .Menu which had no effect since it is not
  a positioned element

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -3,7 +3,6 @@
 .Menu {
   background: var(--color-surface);
   box-shadow: 0 3px 20px rgba(0, 0, 0, 0.3);
-  z-index: 100;
   color: black;
   text-align: left;
   border: 1px solid var(--color-surface-edge);
@@ -64,7 +63,7 @@
 
 .MenuTrigger-popup {
   position: absolute;
-  z-index: 10;
+  z-index: 5;
   top: 100%;
   right: 0;
   width: max-content;
